--- a/index.html
+++ b/index.html
@@ -1,76 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Html, Css, Js">
-    <meta name="description" content="HML and CSS for beginners">
-    <meta name="author" content="Digital School">
-    <meta name="robots" content="index, archive, follow">
-
-
-
-    <meta property="og:url" content="https://www.youtube.com/watch?v=jNQXAC9IVRw">
-    <meta property="og:type" content="video">
-    <meta property="og:title" content="First video on Youtube/Me at the zoo">
-    <meta property="og:description" content="Starring: Jawed">
-    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfQrYqMZwp-A3NHADGykBgWzdTNH8d7cYDiw&">
-
-    <title>Document</title>
+    <title>Dita 19</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
- <p>This is Digital School Logo</p>  
- <picture>
-   <!--<source media="(min-width: 650px)" srcset="logo2.png">
-    <img src="logo.png" style="width: 50%;">
- </picture>
- --> 
- 
- 
-<p>The HTML <code>button</code> tag defines a clickable button</p>
+    <div class="container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
+    <div class="container2">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-<p>Press <kbd>CTRL</kbd> + <kbd>C</kbd> to copy text</p>
-<p>Press <kbd>CTRL</kbd> + <kbd>V</kbd> to paste text</p>
+    <div class="container3">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-<p><samp>Image not found.</samp> Press enter to continue!</p>
+    <div class="container4">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
+    <div class="container5">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
+    <div class="container6">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-    Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis? 
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-     Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis?
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-    Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis? 
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-    Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis? 
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-    Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis?  
-  
+    <div class="container7">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-</p>
+    <div class="container8">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-<pre>>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-    Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis? 
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-     Eius vel quia officiis. Consequuntur nam, libero quis assumenda 
-    saepe excepturi similique ut provident molestiae quam corporis?
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+    <div class="container9">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-</pre>
+    <div class="container10">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-&copy;
-&dollar;
-&euro;
+    <div class="container11">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 
-
+    <div class="container12">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
 </body>
+
 </html>
